src/objects/Contact.object
<CustomObject>
 <fields>
        <fullName>ABB_Contact_ID__c</fullName>
        <label>ABB Contact ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABB_Perspective_Role__c</fullName>
        <description>R5 - ABB Perspective Role</description>
        <label>Role from ABB Perspective</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research &amp; Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountID__c</fullName>
        <description>Provides the ID of a contacts account to be used in buttons for creating new leads</description>
        <formula>Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <description>This field provides the account name of a contact to be used for a merge field in the new button context of a lead created in a related list on a contact</description>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field provides the account name of a contact to be used for a merge field in the new button context of a lead created in a related list on a contact</inlineHelpText>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_RecordType__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
   <fields>
        <fullName>Contact_Status__c</fullName>
        <description>The flag shows red or green depending on the checkbox active__c</description>
        <formula>IF ( Active__c = FALSE,
     IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Contact Inactive&quot;) &amp; &quot; Inactive&quot; ,
     IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Contact Active&quot;) &amp; &quot; Active&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows if this contact is active / inactive (editable / not editable).</inlineHelpText>
        <label>Contact Status</label>
        <type>Text</type>
    </fields>
<fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>First_Name_Local__c</fullName>
        <description>R4.4 implementation for CN CR</description>
        <inlineHelpText>This field can be used to store the Contact First Name in a second language or script, e.g. in local language if the Primary First Name is used to store the English name, or vice versa</inlineHelpText>
        <label>First Name (Secondary)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
   <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Government_Official__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the contact is a public/government official</inlineHelpText>
        <label>Government Official</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name_Local__c</fullName>
        <description>R4.4 implementation for CN CR</description>
        <inlineHelpText>This field can be used to store the Contact Last Name in a second language or script, e.g. in local language if the Primary Last Name is used to store the English name, or vice versa</inlineHelpText>
        <label>Last Name (Secondary)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Name__c</fullName>
        <formula>First_Name_Local__c &amp; &quot; &quot; &amp; Last_Name_Local__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field can be used to store the Contact Name in a second language or script, e.g. in local language if the Primary Name is used to store the English name, or vice versa</inlineHelpText>
        <label>Secondary Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated for User Story R-2314 in ABB DOC:
https://abb--doc.cs18.my.salesforce.com/a0E1100000HuT09</description>
        <inlineHelpText>Do not send e-mail to this contact.</inlineHelpText>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax_Opt_Out__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Updated for User Story R-2314 in ABB DOC:
https://abb--doc.cs18.my.salesforce.com/a0E1100000HuT09</description>
        <inlineHelpText>Do not send letters by fax machine to this contact.</inlineHelpText>
        <label>Fax Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <inlineHelpText>This field is used to categorize the contact&apos;s job title</inlineHelpText>
        <label>Job Function</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrification &amp; Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laboratory Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laboratory Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mill/Plant Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QHSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research &amp; Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for User Story R-2314 in ABB DOC:
https://abb--doc.cs18.my.salesforce.com/a0E1100000HuT09</description>
        <inlineHelpText>Do not send letters or packages to this contact&apos;s postal address.</inlineHelpText>
        <label>Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone_Opt_Out__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Updated for User Story R-2314 in ABB DOC:
https://abb--doc.cs18.my.salesforce.com/a0E1100000HuT09</description>
        <inlineHelpText>Do not talk to this contact by telephone.</inlineHelpText>
        <label>Phone Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Power_Level__c</fullName>
        <label>Power Level</label>
        <picklist>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Input</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <picklist>
            <picklistValues>
                <fullName>(Afan) Oromo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abkhazian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afrikaans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amharic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aragonese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assamese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avestan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aymara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bambara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bashkir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarusian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bengali; Bangla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bislama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bokmål, Norwegian; Norwegian Bokmål</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazilian Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burmese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodian (Central Khmer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalan</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Account_GUID__c</fullName>
        <formula>Account.GUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Account GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedtoGIS__c</fullName>
        <formula>ISBLANK(Account.GUID__c )</formula>
        <label>RelatedtoGIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Opt_Out__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Do not talk to this contact by SMS.</inlineHelpText>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <description>This is to be used to enter the various addressing names. It is not possible to have this as a picklist since the options are many and rather individual.</description>
        <inlineHelpText>This field is used to define how you would greet the contact in an email or letter, eg. Dear John, or Hi Paul.</inlineHelpText>
        <label>Salutation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Email_Address__c</fullName>
        <label>Secondary Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Site_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Site/Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Successor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Successor Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only select Contacts that are not active!</errorMessage>
            <filterItems>
                <field>$Source.Active__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Previous Employments</relationshipLabel>
        <relationshipName>Successor_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>This field is used to define if the contact is external or internal (ie. ABB). Contacts are generally external. However, there could be valid reasons to add an internal contact.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>Active_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Inactive_Contact</fullName>
        <active>true</active>
        <description>Record Type for Inactive Contact</description>
        <label>Inactive Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Record Type for Active Contact (Default)</description>
        <label>Active</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Inactive_Contacts</fullName>
        <active>true</active>
        <description>This validation does not allow Edition of Contact Name for Inactive records.</description>
        <errorConditionFormula>AND (NOT($User.AccountMerge_Override__c), Active__c  = FALSE, OR (ISCHANGED ( FirstName ), ISCHANGED ( LastName ), ISCHANGED (  Salutation  )))</errorConditionFormula>
        <errorDisplayField>Active__c</errorDisplayField>
        <errorMessage>Inactive Contacts cannot be Edited!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Inconsistent_Contact_Method</fullName>
        <active>true</active>
        <description>Checks whether the preferred Contact Method is consistent with the Opt Out Check boxes</description>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),
NOT($Setup.Validation_Override__c.Account_Merge_Override__c) ,OR( 
AND(TEXT(Preferred_Contact_Method__c) =&quot;Email&quot;, Email_Opt_Out__c = true), 
AND(TEXT(Preferred_Contact_Method__c) =&quot;Phone&quot;, Phone_Opt_Out__c = true), 
AND(TEXT(Preferred_Contact_Method__c) =&quot;Fax&quot;, Fax_Opt_Out__c = true), 
AND(TEXT(Preferred_Contact_Method__c) =&quot;Mail&quot;, Mail_Opt_Out__c = true),
AND(TEXT(Preferred_Contact_Method__c) =&quot;SMS&quot;, SMS_Opt_Out__c = true)
))</errorConditionFormula>
        <errorDisplayField>Preferred_Contact_Method__c</errorDisplayField>
        <errorMessage>Either remove the Opt Out for this contact method or choose a different contact method.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_New_Contacts_on_Inactive_Accounts</fullName>
        <active>true</active>
        <description>New contacts must not be created if Account is on &quot;Read Only&quot;</description>
        <errorConditionFormula>IF( AND(NOT($User.AccountMerge_Override__c),( Account.RecordType.Name = &quot;Read Only&quot;), ISNEW() ), True, False)</errorConditionFormula>
        <errorMessage>You can not create a new Contact on an Account that is set to Inactive!</errorMessage>
    </validationRules>
</CustomObject>